--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                 "enabled": true
             },
             "filtering": {
-                "enabled": true
+                "enabled": true,
+                "placeholder": "Eser Ara..."
             },
             "sorting": {
                 "enabled": true
