--- a/index.html
+++ b/index.html
@@ -100,12 +100,15 @@
 <script>
     jQuery(function($){
         $('.table').footable({
+            "state": {
+                "key": "nota-arsivi"
+            },
             "paging": {
                 "enabled": true
             },
             "filtering": {
                 "enabled": true,
-                "placeholder": "Eser Ara..."
+                "placeholder": "Eser ara..."
             },
             "sorting": {
                 "enabled": true
