--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,7 +35,8 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -48,7 +48,8 @@
             <ul class="nav navbar-nav">
                 <li><a href="docs/getting-started.html">Getting started</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Components <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Components <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="docs/components/editing.html">Editing</a></li>
                         <li><a href="docs/components/filtering.html">Filtering</a></li>
@@ -74,7 +75,8 @@
         <h2>A responsive table plugin built on jQuery and made for Bootstrap.</h2>
         <p>Fear not, it also works without Bootstrap!</p>
         <p class="align-center">
-            <a class="btn btn-primary btn-lg" href="docs/getting-started.html#download" role="button">Download FooTable</a>
+            <a class="btn btn-primary btn-lg" href="docs/getting-started.html#download" role="button">Download
+                FooTable</a>
         </p>
     </div>
 
@@ -98,7 +100,13 @@
 <script src="js/footable.js"></script>
 <!-- Initialize FooTable -->
 <script>
-    jQuery(function($){
+
+    let data;
+    jQuery(function ($) {
+        data = $.get("rows.json");
+    });
+
+    jQuery(function ($) {
         $('.table').footable({
             "state": {
                 "key": "nota-arsivi"
@@ -114,7 +122,7 @@
                 "enabled": true
             },
             "columns": $.get("columns.json"),
-            "rows": $.get("rows.json")
+            "rows": data
         });
     });
 </script>
