--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!--<link rel="icon" href="../../favicon.ico">-->
+    <meta name="description" content="Türk Sanat Müziği Nota Arşivi">
+    <meta name="author" content="Mustafa Gökçe">
 
-    <title>FooTable - A jQuery Responsive Table</title>
+    <title>Zeki Atkoşar Türk Sanat Müziği Nota Arşivi</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -18,10 +16,6 @@
     <!-- FooTable Bootstrap CSS -->
     <link href="css/footable.bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="docs/css/docs.css" rel="stylesheet">
-
-    <script src="docs/js/demo-rows.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
