--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="docs/getting-started.html">Önyazı</a></li>
-                <li><a href="docs/getting-started.html">Hakkında</a></li>
+                <li><a href="onyazi.html">Önyazı</a></li>
+                <li><a href="hakkinda.html">Hakkında</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="docs/jsdocs/index.html" target="_blank">JSDocs</a></li>
-                <li><a href="https://github.com/fooplugins/FooTable" target="_blank">GitHub</a></li>
+                <li><a href="onyazi.html">Önyazı</a></li>
+                <li><a href="hakkinda.html">Hakkında</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
