--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <li><a href="hakkinda.html">Hakkında</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="onyazi.html">Önyazı</a></li>
-                <li><a href="hakkinda.html">Hakkında</a></li>
+                <li><a href="iletisim.html">İletişim</a></li>
+                <li><a href="gelistirici.html">Geliştirici</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
