--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container">
         <h1>Zeki Atkoşar</h1>
         <h2>Türk Sanat Müziği Nota Arşivi</h2>
-        <p>Birbirinden değerli eserlerin nota arşivi...</p>
+        <p>Birbirinden değerli Türk Sanat Müziği eserlerinin nota arşivi...</p>
     </div>
 
 </div>
