--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="onyazi.html">Önyazı</a></li>
-                <li><a href="hakkinda.html">Hakkında</a></li>
+                <li>Önyazı</li>
+                <li>Hakkında</li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="iletisim.html">İletişim</a></li>
-                <li><a href="gelistirici.html">Geliştirici</a></li>
+                <li>İletişim</li>
+                <li>Geliştirici</li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -58,7 +58,7 @@
     <div class="container">
         <h1>Zeki Atkoşar</h1>
         <h2>Türk Sanat Müziği Nota Arşivi</h2>
-        <p>Birbirinden değerli Türk Sanat Müziği eserlerinin nota arşivi...</p>
+        <p>Birbirinden değerli Türk Sanat Müziği eserlerinin nota arşivi</p>
     </div>
 
 </div>
