--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>Önyazı</li>
-                <li>Hakkında</li>
+                <li><a href="#">Önyazı</a></li>
+                <li><a href="#">Hakkında</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li>İletişim</li>
-                <li>Geliştirici</li>
+                <li><a href="#">İletişim</a></li>
+                <li><a href="#">Geliştirici</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
